--- a/doomfiles/default.cfg
+++ b/doomfiles/default.cfg
@@ -14,6 +14,8 @@ episode_timeout = 1500
 window_visible = false
 available_buttons = {MOVE_FORWARD TURN_LEFT TURN_RIGHT}
 available_game_variables = {POSITION_X POSITION_Y POSITION_Z VELOCITY_X VELOCITY_Y VELOCITY_Z ANGLE}
+living_reward = -0.1
+mode = player
 game_args += +cl_run 1
 game_args += +vid_aspect 3
 game_args += +cl_spreaddecals 0
