--- a/doomfiles/default.cfg
+++ b/doomfiles/default.cfg
@@ -12,6 +12,7 @@ render_particles = false
 render_effects_sprites = false
 episode_timeout = 1500
 window_visible = false
+living_reward = -0.01
 available_buttons = {MOVE_FORWARD TURN_LEFT TURN_RIGHT}
 available_game_variables = {POSITION_X POSITION_Y POSITION_Z VELOCITY_X VELOCITY_Y VELOCITY_Z ANGLE}
 mode = player
